# native-silk2MP3

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/qw/silk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/bind/: JNIDecoder.c  JNIEncoder.c  eclair_silk_coder_SilkCoder.h
app/src/main/cpp/lame/src/: JNILame.c  JNILame.h  eclair_silk_coder_LameCoder.h
app/src/main/cpp/lame/src/libmp3lame/: id3tag.c  machine.h
app/src/main/cpp/lame/src/mpglib/: mpg123.h
app/src/main/cpp/mp3/: CMakeLists.txt  JNIMp3.c  JNIMp3.h  eclair_silk_coder_MP3Coder.h  minimp3.h
app/src/main/java/qw/silk/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/qw/silk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
